[package]
name = "tally"
version = "0.1.0"

description = "A prettier version of the time command"
readme = "README.md"

authors = ["Jon Gjengset <jon@thesquareplanet.com>"]

keywords = ["cli", "system", "utilities"]
categories = ["command-line-utilities"]

license = "MIT/Apache-2.0"

[dependencies]
ansi_term = "0.9.0"
csv = "1.0.0-beta.4"
clap = "2.26.0"
libc = "0.2"
time = "0.1"
